2022-01-20  Liliana Marie Prikler  <liliana.prikler@ist.tugraz.at>

	* utils/recfmt.c (recfmt_apply_template): Add open brace as excluded
	character in regexp.
	* torture/utils/recfmt.sh (recfmt-curly): New test.

2020-11-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/rec-parser.c (rec_parse_db): Fix error reporting.

2020-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el: Delete.
	* etc/ob-rec.el: Likewise.
	* etc/Makefile.am (dist_lisp_DATA): Remove.
	* doc/rec-mode.texi: Delete.
	* doc/Makefile.am (info_TEXINFOS): Remove rec-mode.texi.
	* m4/pkg.m4: New file.

2020-11-09  Antoine Kalmbach  <ane@iki.fi>

	* utils/recutl.c (recutl_read_file): Update to latest signature
	from gnulib

2020-11-07  Antoine Kalmbach  <ane@iki.fi>

	* etc/rec-mode.el (rec-summary-fields): split by comma and space
	(rec-cmd-show-summary): split minibuffer input

2020-11-06  John Soo  <jsoo1@asu.edu>

	* doc/recutils.texi: Fix long option name for -j/--join.

2020-10-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/rec.c: Simplify code.
	* src/rec.h: Likewise.
	* src/rec-buf.c: Likewise.
	* src/rec-comment.c: Likewise.
	* src/rec-crypt.c: Likewise.
	* src/rec-crypt-dummy.c: Likewise.
	* src/rec-db.c: Likewise.
	* src/rec-fex.c: Likewise.
	* src/rec-field.c: Likewise.
	* src/rec-field-name.c: Likewise.
	* src/rec-int.c: Likewise.
	* src/rec-parser.c: Likewise.
	* src/rec-record.c: Likewise.
	* src/rec-rset.c: Likewise.
	* src/rec-sex.c: Likewise.
	* src/rec-sex-ast.c: Likewise.
	* src/rec-sex-ast.h: Likewise.
	* src/rec-sex-lex.l: Likewise.
	* src/rec-sex-parser.c: Likewise.
	* src/rec-sex-parser.h: Likewise.
	* src/rec-sex-tab.y: Likewise.
	* src/rec-types.c: Likewise.
	* src/rec-utils.c: Likewise.
	* src/rec-utils.h: Likewise.
	* src/rec-writer.c: Likewise.
	* utils/csv2rec.c: Likewise.
	* utils/mdb2rec.c: Likewise.
	* utils/rec2csv.c: Likewise.
	* utils/recdel.c: Likewise.
	* utils/recfix.c: Likewise.
	* utils/recfmt.c: Likewise.
	* utils/recinf.c: Likewise.